[package]
name = "ring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
pnet = "0.31.0"
rand = "0.8.5"
socket2 = "0.4.7"
thiserror = "1.0.37"
anyhow = "1.0"
